--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -97,7 +97,7 @@ const expando = classList.includes("expando") ? true : false;
 <style lang="scss">
     section {
         position: relative;
-        height: var(--height);
+        height: max(var(--height), fit-content);
         --indent: var(--root-indent);
         padding: calc(var(--indent) * var(--vertical-indent)) var(--indent);
     }
