--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -106,6 +106,13 @@ const expando = classList.includes("expando") ? true : false;
         height: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    section.align-centre .component-wrapper {
+        justify-content: center;
+    }
+    section.align-bottom .component-wrapper {
         justify-content: flex-end;
     }
 
