--- a/src/shared/astro/Footer.astro
+++ b/src/shared/astro/Footer.astro
@@ -8,56 +8,59 @@ const textColor = convertColorString(preferences.footer.foreground_color);
 ---
 
 <section
-  class="footer"
-  style={`--background-color: ${preferences.footer.background_color};` +
-    `--text-color: ${textColor};`}
+    class="footer"
+    style={`--background-color: ${preferences.footer.background_color};` +
+        `--text-color: ${textColor};`}
 >
-  {
-    preferences.footer.show_copyright && (
-      <p class="copyright">
-        {preferences.footer.copyright.replace("©", "© " + currentYear)}
-      </p>
-    )
-  }
-  {preferences.footer.show_socials && <Social />}
-  {preferences.footer.show_top_button && <a href="#top">Back to top</a>}
-  <p class="brand">
-    Website by <a
-      href="https://www.millstream.com.au/"
-      target="_blank"
-      rel="noopener noreferrer">Millstream Creative</a
-    >
-  </p>
+    {
+        preferences.footer.show_copyright && (
+            <p class="copyright">
+                {preferences.footer.copyright.replace(
+                    "©",
+                    "© " + currentYear,
+                )}
+            </p>
+        )
+    }
+    {preferences.footer.show_socials && <Social />}
+    {preferences.footer.show_top_button && <a href="#top">Back to top</a>}
+    <p class="brand">
+        Website by <a
+            href="https://www.millstream.com.au/"
+            target="_blank"
+            rel="noopener">Millstream Creative</a
+        >
+    </p>
 </section>
 
 <style>
-  section.footer {
-    display: grid;
-    gap: 2rem;
-    background-color: var(--background-color);
-    grid-template-rows: auto;
-    grid-template-columns: auto auto;
-    color: rgb(var(--text-color));
-  }
-
-  .copyright {
-    margin: 0;
-    height: 100%;
-    display: flex;
-    align-items: center;
-  }
-
-  .brand {
-    margin: 0;
-    grid-column: 2 / 3;
-    text-align: right;
-    opacity: 0.5;
-  }
-
-  @media only screen and (max-width: 768px) {
     section.footer {
-      grid-template-rows: auto auto;
-      grid-template-columns: auto;
+        display: grid;
+        gap: 2rem;
+        background-color: var(--background-color);
+        grid-template-rows: auto;
+        grid-template-columns: auto auto;
+        color: rgb(var(--text-color));
     }
-  }
+
+    .copyright {
+        margin: 0;
+        height: 100%;
+        display: flex;
+        align-items: center;
+    }
+
+    .brand {
+        margin: 0;
+        grid-column: 2 / 3;
+        text-align: right;
+        opacity: 0.5;
+    }
+
+    @media only screen and (max-width: 768px) {
+        section.footer {
+            grid-template-rows: auto auto;
+            grid-template-columns: auto;
+        }
+    }
 </style>
