--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -153,7 +153,7 @@ main:has(:is(.image, .slider):first-child) {
     padding-top: var(--header-offset-transparent);
 
     .glide__arrows {
-        top: var(--header-height);
+        top: var(--header-offset-transparent);
     }
 }
 
