Add navigation component

--- a/src/shared/astro/Footer.astro
+++ b/src/shared/astro/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import { convertColorString } from "@mws-astro/util";
 import Social from "@components/social/social.astro";
+import Navigation from "@components/navigation/Navigation.astro";
 import preferences from "@data/preferences.json";
 const currentYear = new Date().getFullYear();
 
@@ -24,6 +25,7 @@ const textColor = convertColorString(preferences.footer.foreground_color);
     }
     {preferences.footer.show_socials && <Social />}
     {preferences.footer.show_top_button && <a href="#top">Back to top</a>}
+    {preferences.footer.show_sitemap && <Navigation />}
     <p class="brand">
         Website by <a
             href="https://www.millstream.com.au/"
