--- a/src/components/card-index/card.astro
+++ b/src/components/card-index/card.astro
@@ -6,16 +6,17 @@ import Markdown from "@shared/Markdown.astro";
 import Icon from "@shared/icon.astro";
 
 interface Props {
-  card: CollectionEntry<CollectionKey>;
-  include: string[];
-  filters: string[];
+    card: CollectionEntry<CollectionKey>;
+    include: string[];
+    filters: string[];
+    aspect?: number;
 }
 
-const { card, include, filters } = Astro.props;
+const { card, include, filters, aspect = 1 } = Astro.props;
 const combinedCard = Object.assign(Object.assign({}, card), card.data);
 
 const cardProps = Object.fromEntries(
-  Object.entries(combinedCard).filter(([k, v]) => include.includes(k))
+    Object.entries(combinedCard).filter(([k, v]) => include.includes(k)),
 );
 
 const { title, description, thumbnail, slug, ...cardData } = cardProps;
@@ -23,170 +24,175 @@ const link = slug || include.includes("link");
 
 // Convert card props to data attributes for filtering
 const filterData = Object.fromEntries(
-  Object.entries(combinedCard)
-    .filter(([k, v]) => filters.includes(k))
-    .map(([k, v]) => {
-      return [
-        `data-${k}`,
-        Array.isArray(v) ? v.map((v) => v.replaceAll(" ", "-")).join(" ") : v,
-      ];
-    })
+    Object.entries(combinedCard)
+        .filter(([k, v]) => filters.includes(k))
+        .map(([k, v]) => {
+            return [
+                `data-${k}`,
+                Array.isArray(v)
+                    ? v.map((v) => v.replaceAll(" ", "-")).join(" ")
+                    : v,
+            ];
+        }),
 );
 ---
 
 <div class="card-index-card" {...filterData}>
-  {link && <a href={card.slug.replace(/\/?index$/, "")} />}
-  {
-    thumbnail && (
-      <div class="card-thumbnail">
-        <Image image={thumbnail} width={512} aspect={1} />
-      </div>
-    )
-  }
-  <div class="card-text">
-    {title && <h2>{title}</h2>}
-    {description && <Markdown content={description} />}
+    {link && <a class="card-link" href={card.slug.replace(/\/?index$/, "")} />}
     {
-      Object.entries(cardData).map(([k, v], i) => {
-        return (
-          <div class="card-data" {...{ "data-key": k, "data-value": v }}>
-            <>
-              <p class="data-key">{k}</p>
-
-              {Array.isArray(v) ? (
-                v.map((vv) => <p class="data-value">{vv}</p>)
-              ) : (
-                <p class="data-value">{v}</p>
-              )}
-            </>
-          </div>
-        );
-      })
+        thumbnail && (
+            <div class="card-thumbnail">
+                <Image image={thumbnail} width={512} {aspect} />
+            </div>
+        )
     }
-  </div>
-  {
-    include.includes("link") && (
-      <div class="card-read-more">
-        <p>Read More</p>
-        <Icon name="fa6-solid:arrow-right-to-bracket" height="2rem" />
-      </div>
-    )
-  }
+    <div class="card-text">
+        {title && <h2>{title}</h2>}
+        {description && <Markdown content={description} />}
+        {
+            Object.entries(cardData).map(([k, v], i) => {
+                return (
+                    <div
+                        class="card-data"
+                        {...{ "data-key": k, "data-value": v }}
+                    >
+                        <>
+                            <p class="data-key">{k}</p>
+
+                            {Array.isArray(v) ? (
+                                v.map((vv) => <p class="data-value">{vv}</p>)
+                            ) : (
+                                <p class="data-value">{v}</p>
+                            )}
+                        </>
+                    </div>
+                );
+            })
+        }
+    </div>
+    {
+        include.includes("read-more") && (
+            <div class="card-read-more">
+                <p>Read More</p>
+                <Icon name="fa6-solid:arrow-right-to-bracket" height="2rem" />
+            </div>
+        )
+    }
 </div>
 
 <style lang="scss">
-  .card-index-card {
-    display: grid;
-    overflow: hidden;
-    border-radius: var(--border-radius);
-    grid-template-rows: min-content auto auto;
+    .card-index-card {
+        display: grid;
+        overflow: hidden;
+        border-radius: var(--border-radius);
+        grid-template-rows: min-content auto auto;
 
-    position: relative;
-    flex: 0 1 512px;
+        position: relative;
+        flex: 0 1 512px;
 
-    // border: 2px solid rgb(var(--text-color));
+        // border: 2px solid rgb(var(--text-color));
 
-    box-shadow: 0 0 1rem rgb(var(--text-color) / 0.2);
+        box-shadow: 0 0 1rem rgb(var(--text-color) / 0.2);
 
-    border-radius: var(--border-radius);
-    background-color: rgb(var(--background-color));
+        border-radius: var(--border-radius);
+        background-color: rgb(var(--background-color));
 
-    transition:
-      filter 0.4s ease,
-      opacity 0.4s ease,
-      transform 0.4s ease;
+        transition:
+            filter 0.4s ease,
+            opacity 0.4s ease,
+            transform 0.4s ease;
 
-    &.filter-hide {
-      display: none;
-      // transform: scale(0.9);
-      // opacity: 0.1;
-      // filter: grayscale(1);
-      // pointer-events: none;
-      // order: 99999;
-    }
-
-    &.pagination-hide {
-      display: none;
-    }
-
-    > a {
-      position: absolute;
-      inset: 0;
-      z-index: 1;
-      display: block;
-      border: 4px solid transparent;
-      border-radius: inherit;
-      transition:
-        background-color 0.2s ease-in-out,
-        border 0.2s ease-in-out;
-    }
-
-    &:hover > a {
-      background-color: rgb(var(--text-color) / 0.1);
-      border: 4px solid rgb(var(--color-primary));
-    }
-
-    .card-text {
-      padding: 2rem;
-      background-color: rgb(var(--background-color));
-      color: rgb(var(--text-color));
-    }
-
-    .card-read-more {
-      display: flex;
-      margin-top: auto;
-      padding: 1rem 2rem;
-      background-color: rgb(var(--color-primary));
-      --text-color: 255 255 255;
-
-      align-items: center;
-      justify-content: space-between;
-
-      p {
-        margin: 0;
-        font-weight: bold;
-      }
-    }
-
-    .card-thumbnail {
-      position: relative;
-      border-bottom: 4px solid rgb(var(--color-primary));
-
-      &::after {
-        content: "";
-        position: absolute;
-        inset: 0;
-        pointer-events: none;
-        background: linear-gradient(
-          to bottom,
-          transparent 90%,
-          98%,
-          rgb(var(--color-primary) / 0.8)
-        );
-        z-index: 1;
-      }
-    }
-
-    .card-data {
-      display: flex;
-      gap: 1rem;
-      border-radius: var(--border-radius);
-      width: min-content;
-      padding: 0 1.5rem;
-
-      &[data-value=""] {
-        .data-value {
-          display: none;
+        &.filter-hide {
+            display: none;
+            // transform: scale(0.9);
+            // opacity: 0.1;
+            // filter: grayscale(1);
+            // pointer-events: none;
+            // order: 99999;
         }
-      }
 
-      &[data-key]:not([data-value]) {
-        display: none;
-      }
+        &.pagination-hide {
+            display: none;
+        }
 
-      > p {
-        margin: 0;
-      }
+        > a {
+            position: absolute;
+            inset: 0;
+            z-index: 1;
+            display: block;
+            border: 4px solid transparent;
+            border-radius: inherit;
+            transition:
+                background-color 0.2s ease-in-out,
+                border 0.2s ease-in-out;
+        }
+
+        &:hover > a {
+            background-color: rgb(var(--text-color) / 0.1);
+            border: 4px solid rgb(var(--color-primary));
+        }
+
+        .card-text {
+            padding: 2rem;
+            background-color: rgb(var(--background-color));
+            color: rgb(var(--text-color));
+        }
+
+        .card-read-more {
+            display: flex;
+            margin-top: auto;
+            padding: 1rem 2rem;
+            background-color: rgb(var(--color-primary));
+            --text-color: 255 255 255;
+
+            align-items: center;
+            justify-content: space-between;
+
+            p {
+                margin: 0;
+                font-weight: bold;
+            }
+        }
+
+        .card-thumbnail {
+            position: relative;
+            border-bottom: 4px solid rgb(var(--color-primary));
+
+            &::after {
+                content: "";
+                position: absolute;
+                inset: 0;
+                pointer-events: none;
+                background: linear-gradient(
+                    to bottom,
+                    transparent 90%,
+                    98%,
+                    rgb(var(--color-primary) / 0.8)
+                );
+                z-index: 1;
+            }
+        }
+
+        .card-data {
+            display: flex;
+            gap: 1rem;
+            border-radius: var(--border-radius);
+            width: min-content;
+            padding: 0 1.5rem;
+
+            &[data-value=""] {
+                .data-value {
+                    display: none;
+                }
+            }
+
+            &[data-key]:not([data-value]) {
+                display: none;
+            }
+
+            > p {
+                margin: 0;
+            }
+        }
     }
-  }
 </style>
