--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -100,6 +100,7 @@ const expando = classList.includes("expando") ? true : false;
         height: max(var(--height), fit-content);
         --indent: var(--root-indent);
         padding: calc(var(--indent) * var(--vertical-indent)) var(--indent);
+        z-index: 0;
     }
 
     .component-wrapper {
